--- a/Voxel-SkyStone/Assets/Scripts/Stones/Editor/StonesWindow/Menu.uxml
+++ b/Voxel-SkyStone/Assets/Scripts/Stones/Editor/StonesWindow/Menu.uxml
@@ -11,6 +11,7 @@
         <ui:VisualElement name="SelectedStoneSettings" style="flex-grow: 1;">
             <ui:VisualElement name="StoneSettings" style="opacity: 1;">
                 <ui:TextField picking-mode="Ignore" label="Name" name="StoneName" />
+                <uie:IntegerField label="price" value="42" name="StonePrice" />
                 <uie:IntegerField label="TopDamage" value="42" name="StoneTopDamage" />
                 <uie:IntegerField label="RightDamage" value="42" name="StoneRightDamage" style="height: 20px;" />
                 <uie:IntegerField label="BottomDamage" value="42" name="StoneBottomDamage" />
